--- a/Pytorch Intro/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/Pytorch Intro/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -132,7 +132,8 @@
    ],
    "source": [
     "## Calculate the output of this network using the weights and bias tensors\n",
-    "output = activation(torch.mm(features, weights.t()) + bias)\n",
+    "\n",
+    "output = activation(torch.sum(features * weights) + bias)\n",
     "\n",
     "print(output)"
    ]
@@ -186,6 +187,9 @@
    ],
    "source": [
     "## Calculate the output of this network using matrix multiplication\n",
+    "\n",
+    "# Potential Improvement: Could use .t() to get transpose\n",
+    "# Would save trouble of hardcoding/remembering size for .view\n",
     "output = activation(torch.mm(features, weights.view(5,1)) + bias)\n",
     "\n",
     "print(output)"
@@ -226,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,29 +264,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[0.3171]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3171]])\n"
+     ]
     }
    ],
    "source": [
     "## Your solution here\n",
-    "outputLayer = activation(torch.mm(activation(torch.mm(features, W1) + B1), W2) + B2) # Works, but looks pretty messy\n",
     "\n",
-    "# Redefining stuff to make it easier to understand when looking at it later on\n",
+    "# One line (more efficient):\n",
+    "outputLayer = activation(torch.mm(activation(torch.mm(features, W1) + B1), W2) + B2)\n",
+    "\n",
+    "# Broken down (for easier understanding later on when using this notebook as a reference):\n",
     "hiddenLayer = activation(torch.mm(features, W1) + B1)\n",
     "outputLayer = activation(torch.mm(hiddenLayer, W2) + B2)\n",
     "\n",
-    "outputLayer"
+    "print(outputLayer)"
    ]
   },
   {
@@ -305,9 +308,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.13463133, 0.67544685, 0.59689633],\n",
+       "       [0.31712226, 0.52684528, 0.99609102],\n",
+       "       [0.18086924, 0.19296232, 0.21581453],\n",
+       "       [0.93552316, 0.72399204, 0.14019554]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.random.rand(4,3)\n",
@@ -316,9 +333,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1346, 0.6754, 0.5969],\n",
+       "        [0.3171, 0.5268, 0.9961],\n",
+       "        [0.1809, 0.1930, 0.2158],\n",
+       "        [0.9355, 0.7240, 0.1402]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = torch.from_numpy(a)\n",
     "b"
@@ -326,9 +357,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.13463133, 0.67544685, 0.59689633],\n",
+       "       [0.31712226, 0.52684528, 0.99609102],\n",
+       "       [0.18086924, 0.19296232, 0.21581453],\n",
+       "       [0.93552316, 0.72399204, 0.14019554]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b.numpy()"
    ]
@@ -342,9 +387,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2693, 1.3509, 1.1938],\n",
+       "        [0.6342, 1.0537, 1.9922],\n",
+       "        [0.3617, 0.3859, 0.4316],\n",
+       "        [1.8710, 1.4480, 0.2804]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Multiply PyTorch Tensor by 2, in place\n",
     "b.mul_(2)"
@@ -352,13 +411,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.26926266, 1.35089369, 1.19379267],\n",
+       "       [0.63424451, 1.05369056, 1.99218203],\n",
+       "       [0.36173848, 0.38592464, 0.43162906],\n",
+       "       [1.87104631, 1.44798408, 0.28039108]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Numpy array matches new values from Tensor\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Practising PyTorch - Numpy dynamics a little"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.48021567, 0.51838972, 0.50665746, 0.83236048, 0.81337534],\n",
+       "       [0.66180342, 0.18960928, 0.19375481, 0.88405544, 0.6680855 ],\n",
+       "       [0.53636094, 0.87419638, 0.37105371, 0.79448425, 0.25285669],\n",
+       "       [0.82825427, 0.62660388, 0.469282  , 0.93505459, 0.31585155],\n",
+       "       [0.111866  , 0.45653718, 0.2428141 , 0.47709805, 0.53332931]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "siris = np.random.rand(5,5)\n",
+    "siris"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.4802, 0.5184, 0.5067, 0.8324, 0.8134],\n",
+       "        [0.6618, 0.1896, 0.1938, 0.8841, 0.6681],\n",
+       "        [0.5364, 0.8742, 0.3711, 0.7945, 0.2529],\n",
+       "        [0.8283, 0.6266, 0.4693, 0.9351, 0.3159],\n",
+       "        [0.1119, 0.4565, 0.2428, 0.4771, 0.5333]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "siris_torch = torch.from_numpy(siris)\n",
+    "siris_torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.48021567, 0.51838972, 0.50665746, 0.83236048, 0.81337534],\n",
+       "       [0.66180342, 0.18960928, 0.19375481, 0.88405544, 0.6680855 ],\n",
+       "       [0.53636094, 0.87419638, 0.37105371, 0.79448425, 0.25285669],\n",
+       "       [0.82825427, 0.62660388, 0.469282  , 0.93505459, 0.31585155],\n",
+       "       [0.111866  , 0.45653718, 0.2428141 , 0.47709805, 0.53332931]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ausar = siris_torch.numpy()\n",
+    "ausar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
