--- a/Pytorch Intro/Part 4 - Fashion-MNIST (Exercises).ipynb
+++ b/Pytorch Intro/Part 4 - Fashion-MNIST (Exercises).ipynb
@@ -17,9 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset FashionMNIST\n",
+      "    Number of datapoints: 60000\n",
+      "    Root location: /Users/dan/.pytorch/F_MNIST_data/\n",
+      "    Split: Train\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torchvision import datasets, transforms\n",
@@ -30,6 +41,7 @@
     "                                transforms.Normalize((0.5,), (0.5,))])\n",
     "# Download and load the training data\n",
     "trainset = datasets.FashionMNIST('~/.pytorch/F_MNIST_data/', download=True, train=True, transform=transform)\n",
+    "print(trainset)\n",
     "trainloader = torch.utils.data.DataLoader(trainset, batch_size=64, shuffle=True)\n",
     "\n",
     "# Download and load the test data\n",
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
