--- a/Pytorch Intro/Solutions/Part 8 - Transfer Learning (Solution).ipynb
+++ b/Pytorch Intro/Solutions/Part 8 - Transfer Learning (Solution).ipynb
@@ -226,7 +226,7 @@
    "source": [
     "epochs = 1\n",
     "steps = 0\n",
-    "running_loss = 0\n",
+    "running_loss = \n",
     "print_every = 5\n",
     "for epoch in range(epochs):\n",
     "    for inputs, labels in trainloader:\n",
@@ -286,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
