--- a/Pytorch Intro/Part 7 - Loading Image Data (Exercises).ipynb
+++ b/Pytorch Intro/Part 7 - Loading Image Data (Exercises).ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,66 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4 Training:  29%|██▉       | 198/688 [01:13<03:09,  2.59it/s]"
+      "Epoch 4 Training: 100%|██████████| 688/688 [04:18<00:00,  3.01it/s]\n",
+      "Epoch 4 Testing:   0%|          | 0/94 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss Epoch 4: 477.59482204914093\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4 Testing: 100%|██████████| 94/94 [00:18<00:00,  5.21it/s]\n",
+      "Epoch 5 Training:   0%|          | 0/688 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Epoch 4: 49.86702127659575%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 Training: 100%|██████████| 688/688 [04:16<00:00,  3.03it/s]\n",
+      "Epoch 5 Testing:   0%|          | 0/94 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss Epoch 5: 477.67109829187393\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 Testing: 100%|██████████| 94/94 [00:20<00:00,  4.71it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Epoch 5: 49.86702127659575%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
